# antbox

./: .gitignore  Cargo.toml  flake.nix
antbox/: Cargo.toml
antbox/src/: antbox.rs  cliopts.rs  colors.rs  conways.rs  gstate.rs  lib.rs  notifier.rs  run.rs  ticktimer.rs  window.rs
cellauto/: Cargo.toml
cellauto/src/: cell.rs  conwayslife.rs  evolve.rs  lib.rs  randgen.rs  ruleset.rs
engine/: Cargo.toml
engine/src/: lib.rs  notification.rs  notifier.rs  spawn.rs  ticktimer.rs
geom/: Cargo.toml
geom/src/: boundpoint.rs  bounds.rs  direction.rs  grid.rs  lib.rs  point.rs  rect.rs  scalar.rs
logging-options/: Cargo.toml
logging-options/src/: backend.rs  backends.rs  lib.rs  stdcons.rs  verbosity.rs
logging-options/src/backends/: env_logger.rs
setup-log/: Cargo.toml
state/: Cargo.toml
state/src/: genparams.rs  lib.rs  state.rs
try-from-unwrap/: Cargo.toml
try-from-unwrap/src/: lib.rs
