[workspace]
resolver = "3"
members = [
  "antbox",
  "cellauto",
  "geom",
  "logging-options",
  "try-from-unwrap",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
antbox = { path = "antbox" }
antbox-geom = { path = "geom" }
cellauto = { path = "cellauto" }
logging-options = { path = "logging-options" }
try-from-unwrap = { path = "try-from-unwrap" }

anyhow = "1.0.100"
clap = "4.5.53"
derive_more = "2.0.1"
derive-new = "0.7.0"
env_logger = "0.11.8"
log = "0.4.28"
speedy2d = "2.1.0"
