[workspace]
resolver = "3"
members = [
  "antbox",
  "cellauto",
  "engine",
  "geom",
  "logging-options",
  "state",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
antbox = { path = "antbox" }
antbox-cellauto = { path = "cellauto" }
antbox-engine = { path = "engine" }
antbox-geom = { path = "geom" }
antbox-state = { path = "state" }
logging-options = { path = "logging-options" }

anyhow = "1.0.100"
clap = "4.5.53"
derive-new = "0.7.0"
derive_more = "2.0.1"
env_logger = "0.11.8"
itertools = "0.14.0"
log = "0.4.28"
num-integer = "0.1.46"
rand = "0.9.2"
speedy2d = "2.1.0"
