[package]
name = "antbox-engine"
version = "0.1.0"
edition.workspace = true

[dependencies]
antbox-cellauto.workspace = true
antbox-geom.workspace = true
antbox-state.workspace = true
derive-new.workspace = true
derive_more = { workspace = true, features = [ "from", "into" ] }
log.workspace = true
rand.workspace = true
